[gd_scene load_steps=11 format=2]

[ext_resource path="res://Interfaces/bar/time/Bar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/UI/Bar.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Silkscreen-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Silkscreen-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/UI/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Interfaces/controls/Controllers.tscn" type="PackedScene" id=6]
[ext_resource path="res://Interfaces/buttons/button.png" type="Texture" id=7]
[ext_resource path="res://Interfaces/buttons/button_pressed.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
outline_size = 2
outline_color = Color( 0.592157, 0.52549, 0.47451, 1 )
font_data = ExtResource( 4 )

[node name="Interface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InGame Menu" type="CanvasLayer" parent="."]

[node name="Controllers" parent="InGame Menu" instance=ExtResource( 6 )]
margin_left = 36.0
margin_top = 622.0
margin_right = 191.0
margin_bottom = 688.0

[node name="Bar" parent="InGame Menu" instance=ExtResource( 1 )]
margin_left = 440.0
margin_top = 20.0
margin_right = 840.0
margin_bottom = 60.0
script = ExtResource( 2 )

[node name="Pause Menu" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 100

[node name="Pause" type="Control" parent="Pause Menu"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="PauseMenuOverlay" type="ColorRect" parent="Pause Menu/Pause"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.333333 )

[node name="PauseMenuTitle" type="Label" parent="Pause Menu/Pause"]
margin_left = 438.0
margin_top = 160.0
margin_right = 842.0
margin_bottom = 186.0
custom_fonts/font = SubResource( 1 )
text = "Pause - Take a deep breath"

[node name="ButtonGroup" type="VBoxContainer" parent="Pause Menu/Pause"]
margin_left = 460.0
margin_top = 240.0
margin_right = 780.0
margin_bottom = 520.0

[node name="ResumeButton" type="TextureButton" parent="Pause Menu/Pause/ButtonGroup"]
margin_right = 320.0
margin_bottom = 80.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="Pause Menu/Pause/ButtonGroup/ResumeButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "RESUME GAME"
align = 1
valign = 1

[node name="RestartButton" type="TextureButton" parent="Pause Menu/Pause/ButtonGroup"]
margin_top = 84.0
margin_right = 320.0
margin_bottom = 164.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="Pause Menu/Pause/ButtonGroup/RestartButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Restart Game"
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="Pause Menu/Pause/ButtonGroup"]
margin_top = 168.0
margin_right = 320.0
margin_bottom = 248.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )

[node name="Label" type="Label" parent="Pause Menu/Pause/ButtonGroup/ExitButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
text = "Exit Game"
align = 1
valign = 1

[connection signal="pressed" from="Pause Menu/Pause/ButtonGroup/ResumeButton" to="Pause Menu/Pause" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="Pause Menu/Pause/ButtonGroup/RestartButton" to="Pause Menu/Pause" method="_on_RestartButton_pressed"]
[connection signal="pressed" from="Pause Menu/Pause/ButtonGroup/ExitButton" to="Pause Menu/Pause" method="_on_ExitButton_pressed"]
